tests/miniJava/neg/000103_mutation.MiniJava
class java { public java void Main ( String [ ] java ) { { } } }
